--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -160,8 +160,9 @@
                 TabbedPanelItem:
                     id: general_inputs
                     text: 'General Parameters'
-                    BoxLayout:
-                        orientation: 'vertical'
+
+                    GridLayout:
+                        cols: 1
 
                         # General input
                         GridLayout:
@@ -184,6 +185,7 @@
                                             id: geometry
                                             text: 'free'
                                             values: ['sym', 'conv', 'inv', 'free'] if beam_geometry.text == 'cone' else ['conv', 'free']
+                                            on_text: root.on_geometry()
                                     BoxLayout:
                                         LabelHelp:
                                             text: 'Beam geometry'
@@ -192,7 +194,7 @@
                                             id: beam_geometry
                                             text: 'parallel'
                                             values: ['cone', 'parallel']
-                                            on_text: geometry.text = 'free'  # Mode changes, reset GI geometry options
+                                            on_text: root.on_beam_geometry()
                                     BoxLayout:
                                         LabelHelp:
                                             text: 'Design Energy [keV]'
@@ -339,113 +341,133 @@
                                             id: thickness_detector
 
                         # Grating input
-                        GridLayout:
-                            cols: 3
-                            # G0
-                            StackLayout:
-                                BoxLayout:
-                                    NonFileBrowserLabel:
-                                        id: g0_set_name
-                                        text: 'G0'
-                                        bold: True
-                                    CheckBox:
-                                        id: g0_set
-                                        on_active: root.on_grating_checkbox_active(self.active, g0_set_name.text)
-                                BoxLayout:
-                                    orientation: 'vertical'
-                                    size_hint_y: None
-                                    height: root.calc_boxlayout_height(line_height, self)
-                                    disabled: not g0_set.active
-                                    BoxLayout:
-                                        LabelHelp:
-                                            text: 'Design Energy [keV]'
-                                            help_message: parser_info['design_energy'][1]
-                                        FloatInput:
-                                    BoxLayout:
-                                        LabelHelp:
-                                            size_hint_x: 0.4
-                                            text: 'Choose spectrum file'
-                                            help_message: "Location of spectrum file (.csv).\nFile format:\nenergy,photons\ne1,p1\ne2,p2\n.,.\n.,.\n.,."
-                                        Button:
-                                            size_hint_x: 0.1
-                                            text: 'Load'
-                                            on_press: root.show_spectrum_load()
-                                        Button:
-                                            size_hint_x: 0.15
-                                            text: 'Remove'
-                                            on_press: root.spectrum_file_path = ''
-                                        TextInput:
-                                            text: ntpath.basename(root.spectrum_file_path)
-                                    BoxLayout:
-                                        LabelHelp:
-                                            text: 'Spectrum range [keV]'
-                                            help_message: parser_info['spectrum_range'][1]
-                                        CheckBox:
-                                    BoxLayout:
+                        #GridLayout:
+                            #cols: 1
+                        StackLayout:
+                            BoxLayout:
+                                NonFileBrowserLabel:
+                                    text: 'Choose the fixed grating'
+                                Spinner:
+                                    id: fixed_grating
+                                    text: 'Choose fixed grating...'
+                                    values: root.available_gratings
+                            BoxLayout:
+                                orientation: 'vertical'
+                                size_hint_y: None
+                                height: root.calc_boxlayout_height(line_height, self)
+                                GridLayout:
+                                    cols: 3
+
+                                    # G0
+                                    StackLayout:
                                         BoxLayout:
-                                            size_hint_x: 0.5
                                             NonFileBrowserLabel:
-                                                text: 'Min'
-                                            FloatInput:
-                                                size_hint_x: 1
-                                                disabled: not spectrum_range_set.active
+                                                id: g0_set_name
+                                                text: 'G0'
+                                                bold: True
+                                            CheckBox:
+                                                id: g0_set
+                                                disabled: beam_geometry.text == 'parallel'
+                                                on_active: root.on_grating_checkbox_active(self.active, g0_set_name.text)
                                         BoxLayout:
-                                            size_hint_x: 0.5
+                                            orientation: 'vertical'
+                                            size_hint_y: None
+                                            height: root.calc_boxlayout_height(line_height, self)
+                                            disabled: not g0_set.active
+                                            BoxLayout:
+                                                LabelHelp:
+                                                    text: 'Design Energy [keV]'
+                                                    help_message: parser_info['design_energy'][1]
+                                                FloatInput:
+                                            BoxLayout:
+                                                LabelHelp:
+                                                    size_hint_x: 0.4
+                                                    text: 'Choose spectrum file'
+                                                    help_message: "Location of spectrum file (.csv).\nFile format:\nenergy,photons\ne1,p1\ne2,p2\n.,.\n.,.\n.,."
+                                                Button:
+                                                    size_hint_x: 0.1
+                                                    text: 'Load'
+                                                    on_press: root.show_spectrum_load()
+                                                Button:
+                                                    size_hint_x: 0.15
+                                                    text: 'Remove'
+                                                    on_press: root.spectrum_file_path = ''
+                                                TextInput:
+                                                    text: ntpath.basename(root.spectrum_file_path)
+                                            BoxLayout:
+                                                LabelHelp:
+                                                    text: 'Spectrum range [keV]'
+                                                    help_message: parser_info['spectrum_range'][1]
+                                                CheckBox:
+                                            BoxLayout:
+                                                BoxLayout:
+                                                    size_hint_x: 0.5
+                                                    NonFileBrowserLabel:
+                                                        text: 'Min'
+                                                    FloatInput:
+                                                        size_hint_x: 1
+                                                        disabled: not spectrum_range_set.active
+                                                BoxLayout:
+                                                    size_hint_x: 0.5
+                                                    NonFileBrowserLabel:
+                                                        text: 'Max'
+                                                    FloatInput:
+                                                        size_hint_x: 1
+                                                        disabled: not spectrum_range_set.active
+                                            BoxLayout:
+                                                LabelHelp:
+                                                    text: 'Spectrum step size [keV]'
+                                                    help_message: parser_info['spectrum_step'][1]
+                                                FloatInput:
+                                                    text: '1.0'
+                                                    disabled: not spectrum_range_set.active or root.spectrum_file_loaded
+
+
+                                    # G1
+                                    StackLayout:
+                                        BoxLayout:
                                             NonFileBrowserLabel:
-                                                text: 'Max'
-                                            FloatInput:
-                                                size_hint_x: 1
-                                                disabled: not spectrum_range_set.active
-                                    BoxLayout:
-                                        LabelHelp:
-                                            text: 'Spectrum step size [keV]'
-                                            help_message: parser_info['spectrum_step'][1]
-                                        FloatInput:
-                                            text: '1.0'
-                                            disabled: not spectrum_range_set.active or root.spectrum_file_loaded
+                                                id: g1_set_name
+                                                text: 'G1'
+                                                bold: True
+                                            CheckBox:
+                                                id: g1_set
+                                                disabled: geometry.text != 'free'
+                                                background_checkbox_disabled_down: self.background_checkbox_down
+                                                on_active: root.on_grating_checkbox_active(self.active, g1_set_name.text)
+                                        BoxLayout:
+                                            orientation: 'vertical'
+                                            size_hint_y: None
+                                            height: root.calc_boxlayout_height(line_height, self)
+                                            disabled: not g1_set.active
+                                            BoxLayout:
+                                                LabelHelp:
+                                                    text: 'Geometry'
+                                                    help_message: parser_info['geometry'][1]
+                                                Spinner:
+                                                    text: 'sym'
+                                                    values: ['sym', 'conv', 'inv', 'free']
 
-
-                            # G1
-                            StackLayout:
-                                BoxLayout:
-                                    NonFileBrowserLabel:
-                                        id: g1_set_name
-                                        text: 'G1'
-                                        bold: True
-                                    CheckBox:
-                                        id: g1_set
-                                        on_active: root.on_grating_checkbox_active(self.active, g1_set_name.text)
-                                BoxLayout:
-                                    orientation: 'vertical'
-                                    size_hint_y: None
-                                    height: root.calc_boxlayout_height(line_height, self)
-                                    disabled: not g1_set.active
-                                    BoxLayout:
-                                        LabelHelp:
-                                            text: 'Geometry'
-                                            help_message: parser_info['geometry'][1]
-                                        Spinner:
-                                            text: 'sym'
-                                            values: ['sym', 'conv', 'inv', 'free']
-
-                            # G2
-                            StackLayout:
-                                BoxLayout:
-                                    NonFileBrowserLabel:
-                                        id: g2_set_name
-                                        text: 'G2'
-                                        bold: True
-                                    CheckBox:
-                                        id: g2_set
-                                        on_active: root.on_grating_checkbox_active(self.active, g2_set_name.text)
-                                BoxLayout:
-                                    orientation: 'vertical'
-                                    size_hint_y: None
-                                    height: root.calc_boxlayout_height(line_height, self)
-                                    disabled: not g2_set.active
-                                    Button:
-                                    Button:
-                                    Button:
+                                    # G2
+                                    StackLayout:
+                                        BoxLayout:
+                                            NonFileBrowserLabel:
+                                                id: g2_set_name
+                                                text: 'G2'
+                                                bold: True
+                                            CheckBox:
+                                                id: g2_set
+                                                disabled: geometry.text != 'free'
+                                                background_checkbox_disabled_down: self.background_checkbox_down
+                                                on_active: root.on_grating_checkbox_active(self.active, g2_set_name.text)
+                                        BoxLayout:
+                                            orientation: 'vertical'
+                                            size_hint_y: None
+                                            height: root.calc_boxlayout_height(line_height, self)
+                                            disabled: not g2_set.active
+                                            Button:
+                                            Button:
+                                            Button:
 
 
                         Widget:
@@ -473,7 +495,7 @@
                                 id: sample_relative_to
                                 text: 'Source'
                                 on_text: root.on_sample_relative_to()
-                                values: root.setup_components if 'Sample' not in root.setup_components else list(self.setup_components).remove('Sample')
+                                values: root.setup_components
                             CheckBox:
                                 id: add_sample
                                 on_active: root.on_sample_checkbox_active(self.active)
@@ -485,9 +507,9 @@
                             NonFileBrowserLabel:
                                 text: 'Define sample here'
 
-                        Widget:
-                        Widget:
-                        Widget:
+                        #Widget:
+                        #Widget:
+                        #Widget:
 
                         Button:
                             text: 'Calculate geometry'
