--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -266,6 +266,14 @@
                                                     help_message: parser_info['sampling_rate'][1]
                                                 FloatInput:
                                                     id: sampling_rate
+                                            BoxLayout:
+                                                LabelHelp:
+                                                    text: 'Material LUT'
+                                                    help_message: parser_info['look_up_table'][1]
+                                                Spinner:
+                                                    id: look_up_table
+                                                    text: 'NIST'
+                                                    values: ['NIST', 'X0h']
 
                                     # Source
                                     StackLayout:
@@ -408,7 +416,7 @@
                                 # Grating input
                                 GridLayout:
                                     cols: 1
-                                    pos_hint: {'top': 0.75}
+                                    pos_hint: {'top': 0.7}
 
 
                                     StackLayout:
