fixed #11, testing gui input and param check, also input loading

--- a/gisimulation/giGUI.kv
+++ b/gisimulation/giGUI.kv
@@ -287,7 +287,7 @@
                                             BoxLayout:
                                                 disabled: beam_geometry.text == 'parallel'
                                                 LabelHelp:
-                                                    text: 'Source size [um]'
+                                                    text: 'Focal spot size [um]'
                                                     help_message: parser_info['focal_spot_size'][1]
                                                 FloatInput:
                                                     id: focal_spot_size
